Implementation for Conditional enforcement of aspd-classification for new event types   (#184)
* Move OptInTeamsConfig from `api-misc` module to `core-common` module
* Add required Kio app in EventTypeAnnotationsValidator

Co-authored-by: Aleksey Pak <aleksey.pak@zalando.de>